@startuml


class Notificaciones {
    -titulo: str
    -texto: str
    -fecha: str
    -veracidad: str
    -autor: str
    -notificado: str
}

class News {
    -id: str
    -title: str
    -body: str
    -type: str
    -source: str
    -date: str
    -link: str
}

class Tweet {
    -id: str
    -id_autor: str
    -tweet_id: str
    -text: str
    -date_of_publication: str
    -retweet_count: str
    -reply_count: str
    -like_count: str
    -quote_count: str
    -bookmark_count: str
    -impression_count: str
    -verasidad: str
}

class User {
    -id: str
    -name: str
    -lastname: str
    -phone: str
    -email: str
}

class UserTweet {
    -id: str
    -Usuario: str
    -id_user: str
    -name: str
    -location: str
    -description: str
    -entities: str
    -followers_count: str
    -friends_count: str
    -created_at: str
    -listed_count: str
    -verified: str
}

database MongoDB {
 

}

Notificaciones "n" -- "1" MongoDB :almacena


class Clase1{

     toString()
    }

    class Clase2 {
    -titulo: str
    -texto: str
    -fecha: str
    -veracidad: str
    -autor: str
    -notificado: str
      mostrarElementos()
    }

    MongoDB <|-- Clase2
    Clase1 <|-- Clase3

    Clase4 "1" *-- "n" Clase5 :agregación
    Clase6 o-- Clase7
@enduml